**UW unwrap** unwraps UVs incorrectly #100874

Closed
opened 2022-09-07 12:15:28 +02:00 by Boris · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.91

Blender Version
Broken: version: 2.93.10, branch: master, commit date: 2022-08-02 18:21, hash: 0a65e1a8e7
Worked: (newest version of Blender that worked as expected)

Short description of error
[UW unwrap unwraps UVs incorrectly]

Exact steps for others to reproduce the error
[Create geometry like in the picture blender_uv_unwarp.png
Select all polygons and unwrap it using Mesh-UV-Unwrap
UVs at the base of the triangle are in the wrong position
Tested on two computers, including those with Default Factory settings

Video attached
{F13464497}]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.91 **Blender Version** Broken: version: 2.93.10, branch: master, commit date: 2022-08-02 18:21, hash: `0a65e1a8e7` Worked: (newest version of Blender that worked as expected) **Short description of error** [**UW unwrap** unwraps UVs incorrectly] **Exact steps for others to reproduce the error** [Create geometry like in the picture ![blender_uv_unwarp.png](https://archive.blender.org/developer/F13464488/blender_uv_unwarp.png) Select all polygons and unwrap it using **Mesh-UV-Unwrap** UVs at the base of the triangle are in the wrong position Tested on two computers, including those with Default Factory settings Video attached {[F13464497](https://archive.blender.org/developer/F13464497/Blender_2022-09-07_12-37-38.mp4)}] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Parfen

Added subscriber: @Parfen

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thank you for the report.
I can confirm the problem.
I didn't look at the code, but I suspect it has to do with triangulation generating degenerate triangles.

unwrap_ngon_bug.blend

Thank you for the report. I can confirm the problem. I didn't look at the code, but I suspect it has to do with triangulation generating degenerate triangles. [unwrap_ngon_bug.blend](https://archive.blender.org/developer/F13470471/unwrap_ngon_bug.blend)

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn

WIP fix D15922

WIP fix [D15922](https://archive.blender.org/developer/D15922)
Chris Blackbourn self-assigned this 2022-09-09 07:15:10 +02:00

This issue was referenced by 94e211ced9

This issue was referenced by 94e211ced914faff7c1f8d0f68209038afa974bf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100874
No description provided.